# ml

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  matrix.c  matrix.h  model.c  model.h  prng.c  prng.h
src/data/: dataset.c  dataset.h  mnist.c  mnist.h
